--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <option value="wild">Wild</option>
                     <option value="sad">Sad</option>
                 </select>
+                <button type="button">Change Theme</button>
             </nav>
         </div>
         <section class ="drink-details">
