--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <option value="empty">Choose Your Mood</option>     
                     <option value="chill">Chill</option>
                     <option value="wild">Wild</option>
+                    <option value="classy">Classy</option>
                     <option value="sad">Sad</option>
                 </select>
                 <button type="button">Change Theme</button>
