added js and html updates

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang ="en" dir="ltr">
     <head>
     <meta charset="utf-8">
     <script defer src="src/index.js" charset="utf-8"></script>
@@ -32,11 +32,17 @@
             <img id= detail-image src="">
                 <div>
                     <h3 id = "detail-name"></h3>
-                    <h3 id = "detail-ingredients"></h3>
+                    <li id = "detail-ingredients"></li>
+                    <li id = "detail-ingredients2"></li>
+                    <li id = "detail-ingredients3"></li>
                     <h3 id ="detail-instructions"></h3>
                 </div>
             </div>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+              </div>
         </section>
+       
       
 
     </body>
