updated code, random drink works

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <option value="classy">Classy</option>
                     <option value="sad">Sad</option>
                 </select>
-                <button type="button">Change Theme</button>
+                <button type="button" id ="btn">Random Drink</button>
             </nav>
         </div>
         <section class ="drink-details">
@@ -31,7 +31,7 @@
             <div class="drink-info">
             <img id= detail-image src="">
                 <div>
-                    <h3 id = "detail-name"></h3>
+                    <h1 id = "detail-name"></h1>
                     <li id = "detail-ingredients"></li>
                     <li id = "detail-ingredients2"></li>
                     <li id = "detail-ingredients3"></li>
@@ -39,6 +39,7 @@
                 </div>
             </div>
             <div class="slidecontainer">
+                <p>Like Gauge</p>
                 <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
               </div>
         </section>
